--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Impraise frontend assignment 2020"
     />
     <title>Impraise Company Page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
