--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Impraise frontend assignment 2020"
     />
-    <title>Impraise Company Page</title>
+    <title>GitHub Organizations Explorer</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
